used grid to position elements

--- a/index.html
+++ b/index.html
@@ -20,32 +20,31 @@
   </head>
 
   <body>
-    <div class="landing-page">
-      <header>
-        <img class="header-logo" src="images/logo.svg" alt="Huddle logo" />
-        <img
-          class="illustration-mockups"
-          src="images/illustration-mockups.svg"
-          alt=""
-        />
-      </header>
-      <main>
-        <h1>Build The Community Your Fans Will Love</h1>
-        <p>
-          Huddle re-imagines the way we build communities. You have a voice, but
-          so does your audience. Create connections with your users as you
-          engage in genuine discussion.
-        </p>
-        <div class="btn">
-          <button class="btn-register">Register</button>
-        </div>
-
-        <div class="icons">
-          <i class="fa-brands fa-facebook-f"></i>
-          <i class="fa-brands fa-twitter"></i>
-          <i class="fa-brands fa-instagram"></i>
-        </div>
-      </main>
-    </div>
+    <header>
+      <img class="header-logo" src="images/logo.svg" alt="Huddle logo" />
+      <img
+        class="illustration-mockups"
+        src="images/illustration-mockups.svg"
+        alt=""
+      />
+    </header>
+    <main>
+      <h1>Build The Community Your Fans Will Love</h1>
+      <p>
+        Huddle re-imagines the way we build communities. You have a voice, but
+        so does your audience. Create connections with your users as you engage
+        in genuine discussion.
+      </p>
+      <div class="btn">
+        <button class="btn-register">Register</button>
+      </div>
+    </main>
+    <footer>
+      <div class="icons">
+        <i class="fa-brands fa-facebook-f"></i>
+        <i class="fa-brands fa-twitter"></i>
+        <i class="fa-brands fa-instagram"></i>
+      </div>
+    </footer>
   </body>
 </html>
